<resources>
    <string name="app_name">DripTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password</string>
    <string name="today">Today</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="completed">Completed</string>
    <string name="switch_to_login">Switch to login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="enteremail">Enter E-mail</string>
    <string name="input_password">Enter Password</string>
    <string name="inputIsEmpty">Input Is Empty</string>
    <string name="emailRepeat">Error : Registered Email !</string>
    <string name="move2list">Move To List</string>
    <string name="cancel">Cancel</string>
    <string name="password_error">Password Input Error !</string>
    <string name="email_error">Email Input Error</string>
    <string name="action_deleteAll">Empty</string>
    <string name="bustbinReply">Reply</string>
    <string name="bustbinDelete">Delete</string>
    <string name="selected">Selected</string>
    <string name="addList">Add List</string>
    <string name="ok">Ok</string>
    <string name="inputListName">Input New List\'s Name</string>
    <string name="listExisted">List has been existed</string>
    <string name="listEmptyFormat">%1$s has no Task</string>
    <string name="listEmptyCompleted">No Completed Task</string>
    <string name="all">All</string>
    <string name="nearly_seven_days">Nearly Seven Days</string>
    <string name="collection_box">Collection Box</string>
    <string name="dustbin">Dustbin</string>
    <string name="lists">Lists</string>
    <string name="closed_lists">Closed Lists</string>
    <string name="settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="listclose_success">%1$s has been closed</string>
    <string name="action_open">Open</string>
    <string name="listopen_success">%1$s has been opened</string>
    <string name="noList">No List</string>
    <string name="done">Done</string>
    <string name="addItem">Add Item</string>
    <string name="priority">Priority</string>
    <string name="startTime">Start Time</string>
    <string name="deadline">Deadline</string>
    <string name="setStartTime">Set StartTime</string>
    <string name="setDeadline">Set Deadline</string>
    <string name="setTime">Set Time</string>
</resources>
