<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bj_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:src="@mipmap/login_logo_wave" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wave"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:src="@mipmap/logo"
        android:transitionName="share_logo" />

    <TextView
        android:id="@+id/switch_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/switch_to_login"
        android:textColor="#fff"
        android:textSize="10sp" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_above="@id/switch_to_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/signin_bg_signinactivity"
        android:onClick="doClick"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="14sp"
        android:transitionName="bt_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_register"
        android:layout_alignRight="@id/bt_register"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="14dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/register_icon_name" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/username"
                android:textColor="#fff"
                android:textColorHint="#fff" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="45dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login_icon_email" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enteremail"
                android:textColor="#fff"
                android:textColorHint="#fff" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="45dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login_icon_password" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="45dp"
            android:background="#fff" />
    </LinearLayout>

</RelativeLayout>