<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8d8d8">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.AppBarOverlay">

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:onClick="doClick"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/addItem"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/done_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:onClick="doClick"
            android:text="@string/done"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/content_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:hint="Please enter content"
        android:padding="16dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/InputHintTextAppearance">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:minHeight="@dimen/layout_event_height"
            android:singleLine="false"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/prioritybar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_event_height"
        android:layout_below="@id/content_inputlayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:text="@string/priority"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/priority_level_0"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@color/priority_normal"
            android:elevation="1dp"
            android:onClick="doClick"
            android:src="@mipmap/priority_check" />

        <ImageView
            android:id="@+id/priority_level_2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/priority_second_level"
            android:elevation="4dp"
            android:onClick="doClick" />

        <ImageView
            android:id="@+id/priority_level_1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@color/priority_first_level"
            android:elevation="4dp"
            android:onClick="doClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/startTimeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/prioritybar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="@dimen/layout_event_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/startTime" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/startTime_bt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="doClick"
            android:scaleType="centerCrop"
            android:src="@mipmap/calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startTimeBar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="@dimen/layout_event_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/deadline" />

        <TextView
            android:id="@+id/Deadline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/deadline_bt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="doClick"
            android:scaleType="centerCrop"
            android:src="@mipmap/calendar" />
    </LinearLayout>
</RelativeLayout>