<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bj_login"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_logo_wave"
        android:layout_marginTop="92dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/wave"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:transitionName="share_logo"
        android:layout_alignBottom="@+id/wave"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp" />

    <TextView
        android:id="@+id/no_account_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/no_account_sign_up"
        android:textColor="#fff"
        android:textSize="10sp" />

    <Button
        android:id="@+id/bt_signin"
        android:transitionName="bt_signin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_above="@id/no_account_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/signin_bg_signinactivity"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_signin"
        android:layout_alignRight="@id/bt_signin"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="14dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login_icon_email" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="Enter E-mail"
                android:textColor="#fff"
                android:textColorHint="#fff" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="45dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login_icon_password" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:hint="@string/input_password"/>

            <TextView
                android:id="@+id/forgetPW_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/forget_password"
                android:textColor="#89ffffff"
                android:textSize="10sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="45dp"
            android:background="#fff" />
    </LinearLayout>

</RelativeLayout>